worked on nav bar and some css styling

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,1 +1,13 @@
 @import "bootstrap";
+
+#top-nav {
+  text-align: center;
+}
+
+#brand {
+  text-align: left;
+}
+
+#logins {
+  text-align: right;
+}
