--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,32 @@
   </head>
 
   <body>
+    <div class="row" id="top-nav">
+      <div class="col"></div>
 
-    <% if current_user %>
-      You're signed in as <%= current_user.email %>.
-      <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "Sign In", new_user_session_path %>
-      <%= link_to "Sign Up", new_user_registration_path %>
-    <% end %>
+      <div class="col" id="brand">
+        Holy Cow!
+      </div>
+
+      <div class="col">
+        <% if current_user %>
+          Hello, <%= current_user.email %>.
+        <% end %>
+      </div>
+      
+      <div class="col" id="logins">
+        <% if current_user %>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "Sign In", new_user_session_path %>
+          <%= link_to "Sign Up", new_user_registration_path %>
+        <% end %>
+      </div>
+      
+      <div class="col"></div>
+
+    </div>
+
     <% if notice.present? %>
       <p class="notice"><%= notice %></p>
     <% end %>
