--- a/app/views/facts/new.html.erb
+++ b/app/views/facts/new.html.erb
@@ -1,6 +1,10 @@
-<h1>New Fact</h1>
+<div class="booyah-box">
 
-<%= simple_form_for @fact do |f| %>
-  <%= f.input :message %>
-  <%= f.submit "MOO!" %>
-<% end %>
+  <h1>New Fact</h1>
+
+  <%= simple_form_for @fact do |f| %>
+    <%= f.input :message %>
+    <%= f.submit "MOO!" %>
+  <% end %>
+
+</div>
