--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,25 @@
-<h1>HOLY COW!</h1>
+<div class="booyah-box">
+  <div class="row">
 
-<br />
-<%= link_to 'Add a fact', facts_path, class: 'btn btn-success' %>
+    <div class="col feature booyah-box">
+      feature 1
+    </div>
+
+    <div class="col feature booyah-box">
+      <% if current_user %>
+        <%= link_to 'View Facts', facts_path, class: 'btn btn-success' %>
+        <br />
+        <%= link_to 'Add a Fact!', new_fact_path, class: 'btn btn-success' %>
+      <% else %>
+        Please <%= link_to "Sign In", new_user_session_path %>
+        or <%= link_to "Sign Up", new_user_registration_path %>
+        to continue
+      <% end %>
+    </div>
+
+    <div class="col feature booyah-box">
+      feature 3
+    </div>
+
+  </div>
+</div>
