--- a/app/views/facts/index.html.erb
+++ b/app/views/facts/index.html.erb
@@ -8,7 +8,9 @@
   <% @facts.each do |fact| %>
     <div class="booyah-box">
       <p><%= fact.message %></p>
-      <p><%= fact.likes.count %> <%= (fact.likes.count) == 1 ? 'Like' : 'Likes' %></p>
+      <p>
+        <%= fact.likes.count %> <%= (fact.likes.count) == 1 ? 'Like' : 'Likes' %>
+      </p>
       <%= button_to 'HOLY COW!', fact_likes_path(fact), method: :post %>
     </div>
   <% end %>
