--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Holycow</title>
+    <title>Holycow!</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,48 +10,44 @@
   </head>
 
   <body>
-    <div class="row" id="top-nav">
-      <div class="col"></div>
+    <div class="mainApp">
+      <div class="row" id="top-nav">
 
-      <div class="col" id="brand">
-        <%= link_to "HOLY COW!!", root_path %>
-      </div>
+        <div class="col" id="brand">
+          <%= link_to "HOLY COW!", root_path %>
+        </div>
 
-      <div class="col">
-        <% if current_user %>
-          Hello, <%= current_user.email %>.
-        <% end %>
-      </div>
-      
-      <div class="col" id="logins">
-        <% if current_user %>
-          <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-        <% else %>
-          <%= link_to "Sign In", new_user_session_path %>
-          <%= link_to "Sign Up", new_user_registration_path %>
-        <% end %>
-      </div>
-      
-      <div class="col"></div>
-
-    </div>
-
-    <% if notice.present? %>
-      <p class="alert alert-info"><%= notice %></p>
-    <% end %>
-    <% if alert.present? %>
-      <p class="alert alert-danger"><%= alert %></p>
-    <% end %>
-
-    <div class="booyah-box" id="hero">
-     <h1>HOLY COW!</h1>
-    </div>
-
-    <br />
-    
-
+        <div class="col" id="user">
+          <% if current_user %>
+            Hello, <%= current_user.email %>
+          <% end %>
+        </div>
         
-    <%= yield %>
- 
+        <div class="col" id="logins">
+          <% if current_user %>
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+          <% else %>
+            <%= link_to "Sign In", new_user_session_path %> | 
+            <%= link_to "Sign Up", new_user_registration_path %>
+          <% end %>
+        </div>
+
+      </div>
+
+      <% if notice.present? %>
+          <p class="alert alert-info"><%= notice %></p>
+      <% end %>
+      <% if alert.present? %>
+        <div class="booyah-box notices">
+          <p class="alert alert-danger"><%= alert %></p>
+        </div>
+      <% end %>
+
+
+      
+
+          
+      <%= yield %>
+    </div>
   </body>
 </html>
