added some font awesome icons

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,5 +1,6 @@
 @import "bootstrap";
 @import url('https://fonts.googleapis.com/css?family=Modak|Source+Sans+Pro&display=swap');
+@import "font-awesome";
 
 #top-nav {
   text-align: center;
