--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,7 +9,10 @@
 <div class="row">
 
   <div class="col feature booyah-box">
-    If a fact is interesting then hit it with a HOLY COW!
+    <p>
+      If a fact is interesting then hit it with a HOLY COW!
+      <i class="fa-circle-thin" style="color:#f7e411;"></i>
+    </p>
   </div>
 
   <div class="col feature booyah-box">
@@ -24,6 +27,7 @@
 
   <div class="col feature booyah-box">
     If a fact is pretty lame then hit it with a COWPIE!
+    <i class="fas fa-poop" style="color:brown;"></i>
   </div>
 
 </div>
