--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -11,8 +11,8 @@
   <div class="col feature booyah-box">
     <p>
       If a fact is interesting then hit it with a HOLY COW!
-      <i class="fa-circle-thin" style="color:#f7e411;"></i>
     </p>
+    <i class="fa-circle-thin fa-4x" style="color:#f7e411;"></i>
   </div>
 
   <div class="col feature booyah-box">
@@ -26,8 +26,10 @@
   </div>
 
   <div class="col feature booyah-box">
+    <p>
     If a fact is pretty lame then hit it with a COWPIE!
-    <i class="fas fa-poop" style="color:brown;"></i>
+    </p>
+    <i class="fas fa-poo fa-3x"></i>
   </div>
 
 </div>
